--- a/pallets/difttt/Cargo.toml
+++ b/pallets/difttt/Cargo.toml
@@ -30,6 +30,7 @@ sp-core = { default-features = false, version = "6.0.0", git = "https://github.c
 log = { version = "0.4.14", default-features = false }
 lite-json = { version = "0.1", default-features = false }
 data-encoding = { version = "2.3.2", default-features = false, features = ["alloc"] }
+zenlink-protocol = { version = "*", default-features = false }
 
 [dev-dependencies]
 sp-core = { default-features = false, version = "6.0.0", git = "https://github.com/paritytech/substrate.git", branch = "polkadot-v0.9.22" }
@@ -49,6 +50,7 @@ std = [
 	"sp-std/std",
 	"sp-core/std",
 	"pallet-timestamp/std",
+	"zenlink-protocol/std",
 ]
 
 runtime-benchmarks = ["frame-benchmarking/runtime-benchmarks"]
